# strema-mirror

./: .dir-locals.el  .gitignore  .gitlab-ci.yml  Makefile  README.md  cabal.project  cabal.project.freeze  language-ref.org  overview.org  stack.yaml  strema.cabal  todo.org
examples/: bools.strm  factorial.strm  functor.strm  id.strm  length.strm  map.strm
src/: CodeGen.hs  Compile.hs  JS.hs  Run.hs  Samples.hs  Translate.hs  Utils.hs
src/JS/: Ast.hs  Pretty.hs  ReservedWords.hs
src/Strema/: Ast.hs  Builtins.hs  Common.hs  Parser.hs  Rewrites.hs
src/Strema/Rewrites/: RemoveAnn.hs
src/Strema/Types/: Infer.hs  Types.hs
src/backend/: .dir-locals.el  LICENSE  strema-backend-js.cabal
src/backend/src/Language/Backend/: JS.hs
src/backend/src/Language/Backend/JS/: Ast.hs  Pretty.hs  ReservedWords.hs
src/backend/test/Tests/: PrettySpec.hs
src/compiler/: .dir-locals.el  strema-compiler.cabal
src/compiler/app/: Main.hs
src/compiler/src/Language/Strema/Compiler/: Compile.hs  Run.hs  Translate.hs
src/compiler/test/Tests/: CompileSpec.hs  TranslateSpec.hs
src/strema/: .dir-locals.el  strema-language.cabal
src/strema/src/Language/: Strema.hs
src/strema/src/Language/Strema/: Builtins.hs  Common.hs  Rewrites.hs
src/strema/src/Language/Strema/Rewrites/: RemoveAnn.hs
src/strema/src/Language/Strema/Syntax/: Ast.hs  Parser.hs
src/strema/src/Language/Strema/Types/: Infer.hs  Types.hs
src/strema/test/Tests/: InferSpec.hs  ParserSpec.hs
test/: Spec.hs
test/Tests/: CompileSpec.hs  InferSpec.hs  ParserSpec.hs  Pretty.hs  PrettySpec.hs  TranslateSpec.hs  Unit.hs
website/: index.html
website/haddocks/: index.html
website/static/css/: main.css
website/static/highlight/: highlight.pack.js
website/static/highlight/styles/: arta.css
