name:                strema-language
version:             0.1.0.0
synopsis:            A programming language developed live on stream
description:         Strema is a statically typed, (mostly) functional programming language
                     with first-class functions, records, ADTs, and pattern matching
                     and is developed live on stream.
homepage:            https://gitlab.com/gilmi/strema#readme
license:             BSD3
license-file:        LICENSE
author:              Gil Mizrahi
maintainer:          gilmi@posteo.net
copyright:           2021 Gil Mizrahi
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src

  exposed-modules:
    Language.Strema
      Language.Strema.Builtins
      Language.Strema.Common

      Language.Strema.Rewrites
        Language.Strema.Rewrites.RemoveAnn

      Language.Strema.Syntax.Ast
      Language.Strema.Syntax.Parser

      Language.Strema.Types.Infer
      Language.Strema.Types.Types

  other-modules:
    Utils

  build-depends:       base >= 4.7 && < 5
                     , containers
                     , text
                     , pretty-simple
                     , mtl
                     , prettyprinter
                     , megaparsec
                     , uniplate
                     , optparse-generic

  default-extensions:
    LambdaCase
    TypeApplications
    DeriveDataTypeable
    DeriveFunctor
    DeriveFoldable
    DeriveTraversable
    DeriveGeneric

  default-language:    Haskell2010

  ghc-options:         -Wall

test-suite strema-language-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  other-modules:
    Tests.InferSpec
    Tests.ParserSpec
  build-depends:       base
                     , strema-language
                     , text
                     , containers
                     , mtl
                     , hspec
                     , QuickCheck
                     , process
                     , raw-strings-qq
                     , uniplate

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-tool-depends: hspec-discover:hspec-discover == 2.*

source-repository head
  type:     git
  location: https://gitlab.com/gilmi/strema
